--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       text-decoration: none;
       align-self: center;
       width: 90%;
+      padding-bottom: 0px;
       
       
     }
@@ -109,8 +110,10 @@
       font-family: Montserrat;
 
     }
-    .price{
-
+    button:hover{
+      background-color: hsl(212, 21%, 14%) ;
+      cursor: pointer;
+      transition: 500ms;
     }
 
     @media all and (min-width: 600px) {
